# visual-bingo-rust

./: .gitignore  Cargo.toml  README.md  bingo.toml
bingo-cli/: Cargo.toml
bingo-cli/src/: config.rs  main.rs
bingo-core/: Cargo.toml
bingo-core/src/: generate.rs  lib.rs  pdf.rs  shuffle.rs
bingo-wasm/: Cargo.toml
bingo-wasm/src/: lib.rs
scripts/: build.sh  cloudflare-build.sh  dev.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: GenerationPanel.tsx  SetPanel.tsx  ThumbnailPanel.tsx
web/src/hooks/: usePersistence.ts
web/src/lib/: bingo.ts  download.ts  images.ts  pdf.ts  seed.ts  storage.ts  wasm.ts
