[package]
name = "bingo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bingo-core = { path = "../bingo-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
serde_json = "1.0.149"
